plugins {
    id 'org.springframework.boot' version '3.4.0' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false
    id 'org.asciidoctor.jvm.convert' version '4.0.5'
}

group = 'com.felipe.belo'
version = '0.0.1-SNAPSHOT'
description = 'mvp'

subprojects {
    apply plugin: 'java-library'
    apply plugin: 'io.spring.dependency-management'

    group = rootProject.group
    version = rootProject.version

    java {
        sourceCompatibility = '21'
        targetCompatibility = '21'
    }

    repositories {
        mavenCentral()
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:3.4.0"
            mavenBom "org.springframework.modulith:spring-modulith-bom:1.4.4"
        }
    }
    tasks.register('aggregateJavadoc', Javadoc) {
        description = 'Generates aggregated Javadoc for all modules'
        group = JavaBasePlugin.DOCUMENTATION_GROUP

        // collect all main sources from subprojects
        source = subprojects*.sourceSets.main*.allJava
        // union of classpaths so cross-module types resolve
        classpath = files(subprojects*.sourceSets.main*.compileClasspath)

        destinationDir = file("$layout.buildDirectory/docs/javadoc-aggregate")
        options.encoding = 'UTF-8'
        options.addBooleanOption('html5', true)
    }
}